Fixed some alignment issues with contact class on resume

--- a/src/CSS/resume.css
+++ b/src/CSS/resume.css
@@ -249,7 +249,7 @@ time {
         /* padding-left: 1.5rem; */
     }
     .contact {
-        padding-top: 0rem;
+        padding-top: 0.5rem;
     }
 }
 
@@ -269,6 +269,10 @@ time {
 
     .name-contact ul {
         /* padding-top: .25rem; */
+    }
+
+    .contact {
+        padding-top: 0;
     }
 }
 
